Fix the issue of a couple of images not showing up due to the capitalization issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5898,7 +5898,7 @@ ISO CreativOS Start
   .iso-creativos {
     background-color: #0c0a1f;
     .banner {
-      background-image: url(../images/iso-creativos/speed-lines.png);
+      background-image: url(../images/iso-creativos/speed-lines-renamed.png);
       background-repeat: no-repeat;
       background-size: 100% 36.4285714286rem;
       padding: 5.143rem 0;
